Fix data generation code.